--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "email": "kgryte@gmail.com"
   },
   "contributors": [
-    {
+		{
       "name": "Athan Reines",
       "email": "kgryte@gmail.com"
+    },
+    {
+      "name": "Philipp Burckhardt",
+      "email": "pburckhardt@outlook.com"
     }
   ],
   "scripts": {
@@ -39,13 +43,13 @@
     "validate.io-integer": "^1.0.2"
   },
   "devDependencies": {
-    "chai": "1.x.x",
+    "chai": "2.x.x",
     "compute-mean": "^1.0.1",
     "coveralls": "^2.11.1",
     "istanbul": "^0.3.0",
     "jshint": "2.x.x",
     "jshint-stylish": "^1.0.0",
-    "mocha": "1.x.x"
+    "mocha": "2.x.x"
   },
   "licenses": [
     {
