--- a/package.json
+++ b/package.json
@@ -40,8 +40,9 @@
     "url": "https://github.com/compute-io/unzip/issues"
   },
   "dependencies": {
-    "validate.io-integer": "^1.0.2",
-    "validate.io-array": "^1.0.3"
+    "validate.io-array": "^1.0.3",
+    "validate.io-array-array": "^1.0.0",
+    "validate.io-nonnegative-integer": "^1.0.0"
   },
   "devDependencies": {
     "chai": "2.x.x",
